--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-  "name": "lba-backend",
+  "name": "lba-rank-api",
   "version": "1.0.0",
-  "description": "Backend API for Liam's British Army Roblox group",
+  "description": "Backend API for LBA Liams British Army",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
-  },
-  "keywords": [
-    "roblox",
-    "noblox.js",
-    "express",
-    "api",
-    "discord",
-    "lba"
-  ],
-  "author": "AuctorumDeus",
-  "license": "MIT",
-  "dependencies": {
-    "axios": "^1.7.0",
-    "express": "^4.18.2",
-    "express-rate-limit": "^6.10.0",
-    "noblox.js": "^4.5.0"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "engines": {
-    "node": "18.x"
-  }
+    "node": ">=20.18.1"
+  },
+  "dependencies": {
+    "axios": "^1.6.6",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.0",
+    "noblox.js": "^4.8.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yourusername/lba-rank-api.git"
+  },
+  "author": "Auctorum",
+  "license": "MIT"
 }
