--- a/package.json
+++ b/package.json
@@ -1,28 +1,27 @@
 {
-  "name": "lba-rank-api",
+  "name": "roblox-rank-bot",
   "version": "1.0.0",
-  "description": "Backend API for LBA Liams British Army",
+  "description": "Roblox group rank bot with noblox.js and webhook logging",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
-  },
-  "engines": {
-    "node": ">=20.18.1"
+    "start": "node index.js"
   },
   "dependencies": {
-    "axios": "^1.6.6",
-    "express": "^4.18.2",
-    "express-rate-limit": "^7.1.0",
-    "noblox.js": "^4.8.0"
+    "axios": "^1.7.2",
+    "express": "^4.19.2",
+    "express-rate-limit": "^7.5.1",
+    "noblox.js": "^6.2.0",
+    "dotenv": "^16.4.5"
   },
-  "devDependencies": {
-    "nodemon": "^3.0.2"
+  "engines": {
+    "node": "20.x"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/yourusername/lba-rank-api.git"
-  },
-  "author": "Auctorum",
-  "license": "MIT"
+  "license": "MIT",
+  "keywords": [
+    "node",
+    "roblox",
+    "express",
+    "noblox.js",
+    "webhook"
+  ]
 }
